console got sup'd up again. panes now use JRec annotation to automagically expose annotated fields and methods as rec elements. inst handling automatically done through Java Class to mtron type mapping. Have virtual threads implemented -- now core and virtual thread types exist and can be started, paused, stopped -- with FutureObj being accessible through the thread obj. Console panes can be written to independently -- very smooth. LogObj can be pointed to a pane so all logs are separate from the user console.