@@ -19,8 +19,12 @@
 package studio.phaseshift.metatron.isa.mach.type.ui.widget;
 
 import org.jline.terminal.Terminal;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import studio.phaseshift.metatron.furi.fURI;
 import studio.phaseshift.metatron.isa.m.type.Obj;
+import studio.phaseshift.metatron.isa.m.type.reflect.JRec;
+import studio.phaseshift.metatron.isa.m.type.reflect.JRecElement;
 import studio.phaseshift.metatron.isa.mach.type.Machine;
 import studio.phaseshift.metatron.isa.mach.type.Router;
 import studio.phaseshift.metatron.isa.mach.type.ui.Border;
@@ -30,13 +34,13 @@ import studio.phaseshift.metatron.isa.mach.type.ui.console.Highlighter;
 import studio.phaseshift.metatron.isa.mach.type.ui.graphitty.Graphitty;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Consumer;
 
 import static studio.phaseshift.metatron.Tokens.*;
-import static studio.phaseshift.metatron.Tokens.ON_RECV;
 import static studio.phaseshift.metatron.furi.fURI.Singleton.ALL;
 import static studio.phaseshift.metatron.furi.fURI.Singleton.f;
 import static studio.phaseshift.metatron.furi.q.QCollection.SUBSCRIPTION_TID;
@@ -46,6 +50,8 @@ import static studio.phaseshift.metatron.isa.m.type.impl.MInst.instC;
 import static studio.phaseshift.metatron.isa.m.type.impl.MLst.lst;
 import static studio.phaseshift.metatron.isa.m.type.impl.MRec.rec;
 import static studio.phaseshift.metatron.isa.m.type.impl.MUri.uri;
+import static studio.phaseshift.metatron.isa.mach.type.ui.console.Console.CONSOLE_TID;
+import static studio.phaseshift.metatron.util.CommonUtil.mutableMap;
 
 /**
  * A Pane is a leaf node in the pane tree - an actual terminal region with:
@@ -66,13 +72,13 @@ import static studio.phaseshift.metatron.isa.m.type.impl.MUri.uri;
  *
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
-public class Pane implements PaneNode, Stylable<Pane> {
+public class Pane extends JRec<Pane> implements PaneNode, Stylable<Pane> {
 
     private static final AtomicInteger ID_COUNTER = new AtomicInteger(0);
     private static final int DEFAULT_MAX_OUTPUT_LINES = 1000;
+    private static final Logger log = LoggerFactory.getLogger(Pane.class);
 
     private final int id;
-    private fURI vid;
     private Console.Language language;
     private Machine machine;
     private final List<String> outputBuffer;
@@ -85,19 +91,27 @@ public class Pane implements PaneNode, Stylable<Pane> {
     // Reference to console for redraw requests
     private Console console;
 
+    /**
+     * Optional listener fired on every {@link #appendOutput} call.
+     * Registered by Console so it can redraw the pane without Pane needing to
+     * know anything about rendering, throttling, or threading.
+     */
+    private Consumer<Pane> outputListener;
+
     public Pane() {
         this(Console.Language.MTRON, DEFAULT_MAX_OUTPUT_LINES);
     }
 
     public Pane(final Console.Language language, final int maxOutputLines) {
-        this.id = ID_COUNTER.getAndIncrement();
-        this.vid = f("" + this.id);
+        super(mutableMap(), CONSOLE_TID.extend("pane"), Console.LOCAL_INSTANCE.vid().extend("pane").extend("" + ID_COUNTER.getAndIncrement()));
+        this.id = ID_COUNTER.get() - 1;
         this.language = language;
         this.maxOutputLines = maxOutputLines;
         this.outputBuffer = Collections.synchronizedList(new ArrayList<>());
         this.machine = null;
         // Default to simple border style (ASCII: +, |, -) for visibility
         this.style = this.style().border(Border.simple).apply().getStyle();
+        this.subscribe();
     }
 
     @Override
@@ -123,20 +137,26 @@ public class Pane implements PaneNode, Stylable<Pane> {
     public void setConsole(final Console console) {
         this.console = console;
     }
-    
+
+    /** Register a listener that is called after every {@link #appendOutput} call. */
+    public void setOutputListener(final Consumer<Pane> listener) {
+        this.outputListener = listener;
+    }
+
     public void unsubscribe() {
         Router.global().write(this.vid().extend(IN).addQ(SUBQ), noobj());
         Router.global().write(this.vid().extend(OUT).addQ(SUBQ), noobj());
     }
+
     public void subscribe() {
-        Router.global().write(this.vid().extend(IN).addQ(SUBQ), rec(Map.of(
+        Router.global().write(this.vid().extend(IN).addQ(SUBQ), rec(mutableMap(
                 uri(TARGET), uri(this.vid().extend(IN)),
                 uri(ON_RECV), instC(f("in_pane").dom(ALL).rng(NOOBJ_TID.zero()), lst(), (lhs, inst) -> {
                     this.appendInput(lhs.asLst().at(1));
                     this.console.renderPanes();
                     return noobj();
                 })), SUBSCRIPTION_TID, null));
-        Router.global().write(this.vid().extend(OUT).addQ(SUBQ), rec(Map.of(
+        Router.global().write(this.vid().extend(OUT).addQ(SUBQ), rec(mutableMap(
                 uri(TARGET), uri(this.vid().extend(OUT)),
                 uri(ON_RECV), instC(f("out_pane").dom(ALL).rng(NOOBJ_TID.zero()), lst(), (lhs, inst) -> {
                     this.appendResult(lhs.asLst().at(1));
@@ -176,25 +196,35 @@ public class Pane implements PaneNode, Stylable<Pane> {
      * Lines exceeding maxOutputLines are trimmed from the top.
      * Triggers a redraw request.
      */
-    public void appendOutput(final String text) {
+    public void appendOutput(final String text, final boolean newline) {
         if (text == null) return;
         // Split on newlines and add each
-        for (final String line : text.split("\n", -1)) {
-            this.outputBuffer.add(line);
-        }
+        if (newline)
+            this.outputBuffer.addAll(Arrays.asList(text.split("\n", -1)));
+        else if (this.outputBuffer.isEmpty())
+            this.outputBuffer.add(text);
+        else
+            this.outputBuffer.add(this.outputBuffer.removeLast().concat(text));
         // Trim old lines
         while (this.outputBuffer.size() > this.maxOutputLines) {
-            this.outputBuffer.remove(0);
+            this.outputBuffer.removeFirst();
         }
         this.needsRedraw = true;
-        if (this.console != null) {
+        if (this.outputListener != null) {
+            this.outputListener.accept(this);
+        } else if (this.console != null) {
             this.console.requestRedraw();
         }
+    }
+
+    public void appendOutput(final String text) {
+        this.appendOutput(text, true);
     }
 
     /**
      * Append a result object to output (formatted with ==> and syntax highlighted). Thread-safe.
      */
+    @JRecElement(key = "prompt", rng = "noobj{0}", mimic = JRecElement.Mimic.METHOD)
     public void appendInput(final Obj input) {
         this.appendOutput(this.prompt() + Highlighter.format(input.isStr() ? input.strValue() : input.toString()));
     }
@@ -202,6 +232,15 @@ public class Pane implements PaneNode, Stylable<Pane> {
     /**
      * Append a result object to output (formatted with ==> and syntax highlighted). Thread-safe.
      */
+    @JRecElement(key = "stream", rng = "noobj{0}", mimic = JRecElement.Mimic.METHOD)
+    public void streamInput(final Obj input) {
+        this.appendOutput(Highlighter.format(input.isStr() ? input.strValue() : input.toString()), false);
+    }
+
+    /**
+     * Append a result object to output (formatted with ==> and syntax highlighted). Thread-safe.
+     */
+    @JRecElement(key = "result", rng = "noobj{0}", mimic = JRecElement.Mimic.METHOD)
     public void appendResult(final Obj result) {
         result.stream().forEach(o -> {
             // Use Highlighter for syntax highlighting
@@ -316,6 +355,63 @@ public class Pane implements PaneNode, Stylable<Pane> {
         sb.append("{{X}}");
 
         terminal.writer().print(Graphitty.string(sb.toString()));
+        this.needsRedraw = false;
+    }
+
+    /**
+     * Render only the content rows of this pane (rows between the borders), in-place.
+     * <p>
+     * Unlike {@link #render} this does NOT redraw the top/bottom borders and does NOT
+     * clear the rest of the screen, so calling it during live output causes zero flicker.
+     * The caller is responsible for repositioning the cursor afterwards.
+     */
+    public void renderContentOnly(final Terminal terminal, final int startRow, final int startCol,
+                                  final int height, final int width) {
+        final Border border = this.style.border;
+        final String borderColor = "{{b}}"; // non-active colour; active border was drawn by full render
+        final List<String> visible = this.visibleOutput(height);
+        final int contentWidth = width - 2; // -2 for left/right border chars
+
+        final StringBuilder sb = new StringBuilder();
+        int row = startRow + 1;
+
+        for (final String line : visible) {
+            if (row >= startRow + height - 1) break;
+            sb.append("\u001b[").append(row).append(";").append(startCol).append("H");
+            sb.append(Graphitty.string(borderColor));
+            sb.append(border.leftSide());
+            sb.append("{{X}}");
+
+            final String stripped = Graphitty.strip(line);
+            final String truncated = stripped.length() > contentWidth
+                    ? stripped.substring(0, contentWidth - 3) + "..."
+                    : line;
+            sb.append(truncated);
+
+            final int padding = contentWidth - Graphitty.strip(truncated).length();
+            if (padding > 0) sb.append(" ".repeat(padding));
+
+            sb.append(Graphitty.string(borderColor));
+            sb.append(border.rightSide());
+            sb.append("{{X}}");
+            row++;
+        }
+
+        // Clear any leftover rows (e.g. after output was trimmed)
+        while (row < startRow + height - 1) {
+            sb.append("\u001b[").append(row).append(";").append(startCol).append("H");
+            sb.append(Graphitty.string(borderColor));
+            sb.append(border.leftSide());
+            sb.append("{{X}}");
+            sb.append(" ".repeat(contentWidth));
+            sb.append(Graphitty.string(borderColor));
+            sb.append(border.rightSide());
+            sb.append("{{X}}");
+            row++;
+        }
+
+        terminal.writer().print(Graphitty.string(sb.toString()));
+        terminal.writer().flush();
         this.needsRedraw = false;
     }
 
